--- a/web-app/css/lib/style.css
+++ b/web-app/css/lib/style.css
@@ -18,13 +18,6 @@ label, .radio label, .checkbox label {
 .form-control {
   border-radius: initial; }
 
-* {
-    font-family: 'Lato';
-    font-weight: 300;
-    /* why do the below lines not work? */
-    /*font-family: 'Lato-Light';*/
-    /*src: url('/fonts/Lato_Light/Lato-Light.ttf');*/
-}
 
 body {
   font-size: 16px; }
@@ -419,7 +412,6 @@ img.currentlanguage {
   color: white;
   text-transform: uppercase; }
   #header a, #header a:visited {
-    color: white;
     padding: 0 6px; }
 
 #header-top {
@@ -501,4 +493,98 @@ div.veryImportantText {
     height: 1px;
     border-top: 1px solid #aaa;
     margin: 20px 0;
+}
+/* Space out content a bit */
+body {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.marketing,
+.footer {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+/* Custom page header */
+.header {
+    border-bottom: 1px solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+    padding-bottom: 19px;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+}
+
+/* Custom page footer */
+.footer {
+    padding-top: 19px;
+    color: #777;
+    border-top: 1px solid #e5e5e5;
+}
+
+/* Customize container */
+@media (min-width: 768px) {
+    /*.container {*/
+        /*max-width: 730px;*/
+    /*}*/
+}
+.container-narrow > hr {
+    margin: 30px 0;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+    text-align: center;
+    border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+    padding: 14px 24px;
+    font-size: 21px;
+}
+
+/* Supporting marketing content */
+.marketing {
+    margin: 40px 0;
+}
+.marketing p + h4 {
+    margin-top: 28px;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+    /* Remove the padding we set earlier */
+    .header,
+    .marketing,
+    .footer {
+        padding-right: 0;
+        padding-left: 0;
+    }
+    /* Space out the masthead */
+    .header {
+        margin-bottom: 30px;
+    }
+    /* Remove the bottom border on the jumbotron for visual effect */
+    .jumbotron {
+        border-bottom: 0;
+    }
+}
+
+.logoholder  {
+    margin:  30px;
+}
+.serverDescrBig{
+    text-align: center;
+    font-size: 22pt;
+    font-weight: 700;
+}
+.serverDescrSmall{
+    text-align: center;
+    font-size: 18pt;
+    font-style: italic;
+    margin-bottom: 25px;
 }
