--- a/web-app/css/lib/style.css
+++ b/web-app/css/lib/style.css
@@ -588,3 +588,43 @@ body {
     font-style: italic;
     margin-bottom: 25px;
 }
+.btn-xlarge {
+    padding: 18px 28px;
+    font-size: 22px;
+    line-height: normal;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+}
+.bigbutton {
+    display: block;
+    width: 145px;
+    height: 50px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    margin-left: 2px;
+    margin-top: 25px;
+    margin-right: 25px;
+}
+.anchorDescriptionTextContainer {
+    height: 7em;
+    position: relative
+}
+.anchorDescriptionText {
+    font-size: 14pt;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    overflow-y: auto;
+}
+.linkContainerHolder {
+   padding: 50px;
+}
+a.standardLinks {
+    text-decoration: underline;
+}
