--- a/web-app/css/lib/style.css
+++ b/web-app/css/lib/style.css
@@ -598,7 +598,7 @@ body {
 }
 .bigbutton {
     display: block;
-    width: 145px;
+    width: 165px;
     height: 50px;
     background: #4E9CAF;
     padding: 10px;
@@ -606,7 +606,21 @@ body {
     border-radius: 5px;
     color: white;
     font-weight: bold;
-    margin-left: 2px;
+    margin-left: 0px;
+    margin-top: 25px;
+    margin-right: 25px;
+}
+.biggerbutton {
+    display: block;
+    width: 185px;
+    height: 50px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    margin-left: 0px;
     margin-top: 25px;
     margin-right: 25px;
 }
@@ -616,7 +630,7 @@ body {
 }
 .anchorDescriptionText {
     font-size: 14pt;
-    margin: 0;
+    margin: 0 0 0 10px;
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
