add a blog post.   change text on arts and social media. Add a picture I d not yet know what to do with

--- a/web-app/css/lib/style.css
+++ b/web-app/css/lib/style.css
@@ -652,6 +652,8 @@ a.emphasizedLinks {
 p.picCaption {
     font-size: 18pt;
     margin: 20px 30px;
+    background-color: white;
+    padding: 20px;
 }
 div.personalLinks{
     margin-top: 40px;
