--- a/web-app/css/blog.css
+++ b/web-app/css/blog.css
@@ -108,6 +108,9 @@ h6, .h6 {
     padding: 15px;
     margin: 0 -15px 15px;
 }
+.sidebar-module li {
+    margin: 15px 0 15px 0;
+}
 .sidebar-module-inset {
     padding: 15px;
     background-color: #f5f5f5;
@@ -139,6 +142,9 @@ h6, .h6 {
 
 .blog-post {
     margin-bottom: 60px;
+}
+.blog-post pre {
+    margin: 25px 0 25px 0;
 }
 .blog-post-title {
     margin-bottom: 5px;
