blank out the background color on the home page. Also added a blog post about D3 coding

--- a/web-app/css/lib/style.css
+++ b/web-app/css/lib/style.css
@@ -674,6 +674,7 @@ div.mainnav{
     -webkit-border-radius: 5px;
     border-radius: 10px; /* future proofing */
     -khtml-border-radius: 3px; /* for old Konqueror browsers */
+    background-color: #ffffff;
     padding: 15px;
 }
 .captionStyle{
